--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,9 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="icon" type="image/png" href="/resources/img/logo.png"/>
+  <link rel="icon" type="image/png" href="/resources/img/logo.png"/>
+  
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="/resources/css/ldStyle.css" crossorigin="anonymous">
 
   <title>Trung Trang</title>
 
@@ -22,6 +24,7 @@
 
 <body>
   <div id="root"></div>
+  <script src="/app.js"></script>
 </body>
 
 </html>
