--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,9 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
-  <link rel="icon" type="image/png" href="/resources/img/logo.png"/>
-  <link rel="icon" type="image/png" href="/resources/img/logo.png"/>
-  
+  <link rel="icon" type="image/png" href="/resources/img/logo.png" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous">
   <link rel="stylesheet" href="/resources/css/ldStyle.css" crossorigin="anonymous">
 
@@ -24,7 +22,7 @@
 
 <body>
   <div id="root"></div>
-  <script src="/app.js"></script>
+  <script src="/app.js?v={{VERSION_APP}}"></script>
 </body>
 
 </html>
