--- a/MuoiCu_Server/public/index.html
+++ b/MuoiCu_Server/public/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <div id="root"></div>
-  <script src="/app.js?v=1704216202957"></script>
+  <script src="/app.js?v=1.0.0"></script>
 </body>
 
 </html>
